--- a/playbooks/edx-east/legacy_certificates.yml
+++ b/playbooks/edx-east/legacy_certificates.yml
@@ -14,7 +14,7 @@
     - name: stop certs service
       service: name="certificates" state="stopped"
     - name: checkout code
-      git: >
+      git_local: >
         repo="{{ repo_url }}"
         dest="{{ repo_path }}"
         version="{{ certificates_version }}"
