--- a/playbooks/roles/certs/tasks/deploy.yml
+++ b/playbooks/roles/certs/tasks/deploy.yml
@@ -41,7 +41,7 @@
   when: CERTS_GIT_IDENTITY != "none"
 
 - name: checkout certificates repo into {{ certs_code_dir }}
-  git: >
+  git_local: >
     dest={{ certs_code_dir }} repo={{ CERTS_REPO }} version={{ certs_version }}
     accept_hostkey=yes
   sudo_user: "{{ certs_user }}"
@@ -51,7 +51,7 @@
   when: CERTS_GIT_IDENTITY != "none"
 
 - name: checkout certificates repo into {{ certs_code_dir }}
-  git: >
+  git_local: >
     dest={{ certs_code_dir }} repo={{ CERTS_REPO }} version={{ certs_version }}
     accept_hostkey=yes
   sudo_user: "{{ certs_user }}"
