--- a/playbooks/roles/harprofiler/tasks/main.yml
+++ b/playbooks/roles/harprofiler/tasks/main.yml
@@ -14,7 +14,7 @@
     mode=0755
 
 - name: check out the harprofiler
-  git: >
+  git_local: >
     dest={{ harprofiler_dir }}
     repo={{ harprofiler_github_url }} version={{ harprofiler_version }}
     accept_hostkey=yes
