--- a/playbooks/roles/xqwatcher/tasks/deploy_courses.yml
+++ b/playbooks/roles/xqwatcher/tasks/deploy_courses.yml
@@ -3,7 +3,7 @@
 # a per queue basis.
 
 - name: checkout grader code
-  git: >
+  git_local: >
     dest={{ xqwatcher_app_dir }}/data/{{ item.COURSE }} repo={{ item.GIT_REPO }}
     version={{ item.GIT_REF }}
     ssh_opts="{{ xqwatcher_course_git_ssh_opts }}"
