Add backup upstream

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -26,6 +26,10 @@ EDXAPP_BADGR_ISSUER_SLUG: "example-issuer"
 
 EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
+
+EDXAPP_AWS_BACKUP_ENABLE: false
+EDXAPP_AWS_BACKUP_REPO: ''
+EDXAPP_AWS_BACKUP_VERSION: ''
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
