Add COPYRIGHT_YEAR то server-vars.yml

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -19,6 +19,7 @@
 EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
+EDXAPP_COPYRIGHT_YEAR: 2016
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -837,6 +838,9 @@ generic_env_config:  &edxapp_generic_env
   SESSION_SAVE_EVERY_REQUEST: "{{ EDXAPP_SESSION_SAVE_EVERY_REQUEST }}"
   SOCIAL_SHARING_SETTINGS: "{{ EDXAPP_SOCIAL_SHARING_SETTINGS }}"
   SESSION_COOKIE_SECURE: "{{ EDXAPP_SESSION_COOKIE_SECURE }}"
+  ## RACCOONGANG ##
+  COPYRIGHT_YEAR: EDXAPP_COPYRIGHT_YEAR
+  ## END RACCOONGANG ##
 
 lms_auth_config:
   <<: *edxapp_generic_auth
