Add third party auth backends and additional installed apps

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -20,6 +20,8 @@ EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
 EDXAPP_COPYRIGHT_YEAR: 2016
+EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
+EDXAPP_ADDL_INSTALLED_APPS: []
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -838,8 +840,9 @@ generic_env_config:  &edxapp_generic_env
   SESSION_SAVE_EVERY_REQUEST: "{{ EDXAPP_SESSION_SAVE_EVERY_REQUEST }}"
   SOCIAL_SHARING_SETTINGS: "{{ EDXAPP_SOCIAL_SHARING_SETTINGS }}"
   SESSION_COOKIE_SECURE: "{{ EDXAPP_SESSION_COOKIE_SECURE }}"
-  ## RACCOONGANG ##
-  COPYRIGHT_YEAR: EDXAPP_COPYRIGHT_YEAR
+  ##   RACCOONGANG   ##
+  COPYRIGHT_YEAR: "{{ EDXAPP_COPYRIGHT_YEAR }}"
+  ADDL_INSTALLED_APPS: "{{ EDXAPP_ADDL_INSTALLED_APPS }}"
   ## END RACCOONGANG ##
 
 lms_auth_config:
@@ -907,6 +910,9 @@ lms_env_config:
   CREDIT_HELP_LINK_URL: "{{ EDXAPP_CREDIT_HELP_LINK_URL }}"
   ELASTIC_SEARCH_CONFIG: "{{ EDXAPP_ELASTIC_SEARCH_CONFIG }}"
   MAILCHIMP_NEW_USER_LIST_ID: "{{ EDXAPP_MAILCHIMP_NEW_USER_LIST_ID }}"
+  ##   RACCOONGANG   ##
+  THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
+  ## END RACCOONGANG ##
 
 cms_auth_config:
   <<: *edxapp_generic_auth
