--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -22,6 +22,8 @@ EDXAPP_AWS_BACKUP_VERSION: ''
 EDXAPP_COPYRIGHT_YEAR: 2016
 EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
 EDXAPP_ADDL_INSTALLED_APPS: []
+EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES: []
+EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -912,6 +914,7 @@ lms_env_config:
   MAILCHIMP_NEW_USER_LIST_ID: "{{ EDXAPP_MAILCHIMP_NEW_USER_LIST_ID }}"
   ##   RACCOONGANG   ##
   THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
+  ADDL_LMS_MIDDLEWARE_CLASSES: "{{ EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES }}"
   ## END RACCOONGANG ##
 
 cms_auth_config:
@@ -942,6 +945,9 @@ cms_env_config:
   <<: *edxapp_generic_env
   SITE_NAME:  "{{ EDXAPP_CMS_SITE_NAME }}"
   GIT_REPO_EXPORT_DIR: "{{ EDXAPP_GIT_REPO_EXPORT_DIR }}"
+  ##   RACCOONGANG   ##
+  ADDL_CMS_MIDDLEWARE_CLASSES: "{{ EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES }}"
+  ## END RACCOONGANG ##
 
 # install dir for the edx-platform repo
 edxapp_code_dir: "{{ edxapp_app_dir }}/edx-platform"
