--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -24,6 +24,7 @@ EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
 EDXAPP_ADDL_INSTALLED_APPS: []
 EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES: []
 EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
+EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\n$'
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -915,6 +916,7 @@ lms_env_config:
   ##   RACCOONGANG   ##
   THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
   ADDL_LMS_MIDDLEWARE_CLASSES: "{{ EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES }}"
+  SOCIAL_AUTH_EXCLUDE_URL_PATTERN: "{{ EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN }}"
   ## END RACCOONGANG ##
 
 cms_auth_config:
