Fix SOCIAL_AUTH_EXCLUDE_URL_PATTERN default value

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -24,7 +24,7 @@ EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
 EDXAPP_ADDL_INSTALLED_APPS: []
 EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES: []
 EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
-EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\n$'
+EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\/admin\/.*'
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
