Add course visibility settings

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -25,6 +25,8 @@ EDXAPP_ADDL_INSTALLED_APPS: []
 EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES: []
 EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
 EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\/admin\/.*'
+EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
+EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -917,6 +919,8 @@ lms_env_config:
   THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
   ADDL_LMS_MIDDLEWARE_CLASSES: "{{ EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES }}"
   SOCIAL_AUTH_EXCLUDE_URL_PATTERN: "{{ EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN }}"
+  COURSE_CATALOG_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION }}"
+  COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
   ## END RACCOONGANG ##
 
 cms_auth_config:
