--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -27,6 +27,7 @@ EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
 EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\/admin\/.*'
 EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
+NGINX_EDXAPP_ENABLE_MAINTENANCE: true
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -972,8 +973,8 @@ edxapp_lms_gunicorn_host: 127.0.0.1
 # 'edxapp' upstart job.
 
 service_variants_enabled:
-  - lms
   - cms
+  - lms
 
 #Number of gunicorn worker processes to spawn, as a multiplier to number of virtual cores
 worker_core_mult:
