--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -27,6 +27,8 @@ EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
 EDXAPP_SOCIAL_AUTH_EXCLUDE_URL_PATTERN: '^\/admin\/.*'
 EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
+EDXAPP_CMS_MKTG_URLS:
+  TOS: "/tos"
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -953,6 +955,7 @@ cms_env_config:
   GIT_REPO_EXPORT_DIR: "{{ EDXAPP_GIT_REPO_EXPORT_DIR }}"
   ##   RACCOONGANG   ##
   ADDL_CMS_MIDDLEWARE_CLASSES: "{{ EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES }}"
+  CMS_MKTG_URLS: "{{ EDXAPP_CMS_MKTG_URLS }}"
   ## END RACCOONGANG ##
 
 # install dir for the edx-platform repo
