Add django ADMINS

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -16,6 +16,7 @@
 # when the edxapp config is written to disk.
 
 ## RACCOONGANG ##
+EDXAPP_ADMINS: []
 EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
@@ -848,6 +849,7 @@ generic_env_config:  &edxapp_generic_env
   SOCIAL_SHARING_SETTINGS: "{{ EDXAPP_SOCIAL_SHARING_SETTINGS }}"
   SESSION_COOKIE_SECURE: "{{ EDXAPP_SESSION_COOKIE_SECURE }}"
   ##   RACCOONGANG   ##
+  ADMINS: "{{ EDXAPP_ADMINS }}"
   COPYRIGHT_YEAR: "{{ EDXAPP_COPYRIGHT_YEAR }}"
   ADDL_INSTALLED_APPS: "{{ EDXAPP_ADDL_INSTALLED_APPS }}"
   ## END RACCOONGANG ##
