--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -21,7 +21,12 @@ EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
 EDXAPP_COPYRIGHT_YEAR: 2016
-EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
+EDXAPP_THIRD_PARTY_AUTH_BACKENDS:
+- "social.backends.google.GoogleOAuth2"
+- "social.backends.linkedin.LinkedinOAuth2"
+- "social.backends.facebook.FacebookOAuth2"
+- "social.backends.twitter.TwitterOAuth"
+- "third_party_auth.saml.SAMLAuthBackend"
 EDXAPP_ADDL_INSTALLED_APPS: []
 EDXAPP_ADDL_LMS_MIDDLEWARE_CLASSES: []
 EDXAPP_ADDL_CMS_MIDDLEWARE_CLASSES: []
@@ -100,7 +105,7 @@ EDXAPP_CMS_ENV: 'cms.envs.aws'
 
 EDXAPP_EMAIL_BACKEND: 'django.core.mail.backends.smtp.EmailBackend'
 EDXAPP_EMAIL_HOST: 'localhost'
-EDXAPP_EMAIL_PORT: 25
+EDXAPP_EMAIL_PORT: 25peterkob
 EDXAPP_EMAIL_USE_TLS: False
 EDXAPP_EMAIL_HOST_USER: ''
 EDXAPP_EMAIL_HOST_PASSWORD: ''
