--- a/playbooks/roles/edx_notes_api/defaults/main.yml
+++ b/playbooks/roles/edx_notes_api/defaults/main.yml
@@ -23,9 +23,9 @@ EDX_NOTES_API_MYSQL_HOST: localhost
 EDX_NOTES_API_ELASTICSEARCH_URL: http://127.0.0.1:9200
 EDX_NOTES_API_NEWRELIC_APPNAME: "{{ COMMON_ENVIRONMENT }}-{{ COMMON_DEPLOYMENT }}-notes"
 # Change these values!!
-EDX_NOTES_API_SECRET_KEY: "CHANGEME"
-EDX_NOTES_API_CLIENT_ID: "CHANGEME"
-EDX_NOTES_API_CLIENT_SECRET: "CHANGEME"
+EDX_NOTES_API_SECRET_KEY: "7a7aeecd9aaa4148ca603f52ae8cf45361f2a747"
+EDX_NOTES_API_CLIENT_ID: "dea749cfd34e70bd232d"
+EDX_NOTES_API_CLIENT_SECRET: "703a84648038363cc9818fc040aba6cded898059"
 EDX_NOTES_API_GIT_SSH_KEY: !!null
 EDX_NOTES_API_VERSION: master
 
