--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -145,7 +145,7 @@ EDXAPP_ENABLE_AUTO_AUTH: false
 # Settings for enabling and configuring third party authorization
 EDXAPP_ENABLE_THIRD_PARTY_AUTH: false
 
-EDXAPP_ENABLE_EDXNOTES: false
+EDXAPP_ENABLE_EDXNOTES: true
 
 EDXAPP_ENABLE_CREDIT_ELIGIBILITY: false
 EDXAPP_ENABLE_CREDIT_API: false
@@ -532,8 +532,8 @@ EDXAPP_PARSE_KEYS: {}
 # In a production environment when using separate clusters, you'll
 # want to route requests differently from the LMS (internal api) and
 # from JS (public API)
-EDXAPP_EDXNOTES_PUBLIC_API: http://localhost:18120/api/v1
-EDXAPP_EDXNOTES_INTERNAL_API: http://localhost:18120/api/v1
+EDXAPP_EDXNOTES_PUBLIC_API: https://university-sandbox.raccoongang.com:18120/api/v1
+EDXAPP_EDXNOTES_INTERNAL_API: https://university-sandbox.raccoongang.com:18120/api/v1
 
 EDXAPP_XBLOCK_SETTINGS: {}
 
