Setting fact NGINX_ENABLE_SSL is true for whole role.

--- a/playbooks/roles/add-letsencrypt-certificate/tasks/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 
+- set_fact: NGINX_ENABLE_SSL=true
+
 - name: Installing certbot dependencies
   apt: name="{{ item }}" update_cache=yes
   with_items: "{{ le_packages }}"
