--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -25,7 +25,7 @@ EDXAPP_BADGR_BASE_URL: "http://localhost:8005"
 EDXAPP_BADGR_ISSUER_SLUG: "example-issuer"
 
 EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
-￼EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
+EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -954,7 +954,7 @@ generic_env_config:  &edxapp_generic_env
   AFFILIATE_COOKIE_NAME: "{{ EDXAPP_AFFILIATE_COOKIE_NAME }}"
   # RACCOONGANG
   COURSE_CATALOG_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION }}"
-￼  COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
+  COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
 
 lms_auth_config:
   <<: *edxapp_generic_auth
