--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -24,6 +24,7 @@ EDXAPP_BADGR_API_TOKEN: None
 EDXAPP_BADGR_BASE_URL: "http://localhost:8005"
 EDXAPP_BADGR_ISSUER_SLUG: "example-issuer"
 
+EDXAPP_COPYRIGHT_YEAR: 2016
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -950,6 +951,9 @@ generic_env_config:  &edxapp_generic_env
     limits: "{{ EDXAPP_CODE_JAIL_LIMITS }}"
     user: '{{ edxapp_sandbox_user }}'
   AFFILIATE_COOKIE_NAME: "{{ EDXAPP_AFFILIATE_COOKIE_NAME }}"
+  ## RACCOONGANG ##
+  COPYRIGHT_YEAR: EDXAPP_COPYRIGHT_YEAR
+  ## END RACCOONGANG ##
 
 lms_auth_config:
   <<: *edxapp_generic_auth
