--- a/playbooks/roles/edxapp/tasks/main.yml
+++ b/playbooks/roles/edxapp/tasks/main.yml
@@ -76,6 +76,18 @@
     - install
     - install:base
 
+- name: Creates {{EDXAPP_GRADE_STORAGE_KWARGS.location}} directory
+  file: path="{{EDXAPP_GRADE_STORAGE_KWARGS.location}}" state=directory owner=www-data group=www-data mode=0775 recurse=yes
+  when: (EDXAPP_GRADE_STORAGE_TYPE_LOCAL is defined) and (EDXAPP_GRADE_STORAGE_TYPE_LOCAL == true)  
+ 
+- name: Create symlink to {{EDXAPP_GRADE_STORAGE_KWARGS.location}}
+  file: >
+    src="{{EDXAPP_GRADE_STORAGE_KWARGS.location}}"
+    dest="{{ edxapp_media_dir }}/grades"
+    state=link
+    force=true
+  when: (EDXAPP_GRADE_STORAGE_TYPE_LOCAL is defined) and (EDXAPP_GRADE_STORAGE_TYPE_LOCAL == true)
+
 # adding chris-lea nodejs repo
 - name: add ppas for current versions of nodejs
   apt_repository:
