--- a/playbooks/roles/programs/defaults/main.yml
+++ b/playbooks/roles/programs/defaults/main.yml
@@ -37,7 +37,7 @@ PROGRAMS_VERSION: "master"
 PROGRAMS_DJANGO_SETTINGS_MODULE: "programs.settings.production"
 PROGRAMS_URL_ROOT: 'http://localhost:8004'
 PROGRAMS_LOGOUT_URL: '{{ PROGRAMS_URL_ROOT }}/accounts/logout/'
-PROGRAMS_LMS_URL_ROOT: 'http://127.0.0.1:8000'
+PROGRAMS_LMS_URL_ROOT: 'https://edx-stage.cloudapp.net'
 PROGRAMS_ORGANIZATIONS_API_URL_ROOT: '{{ PROGRAMS_LMS_URL_ROOT }}/api/organizations/v0/'
 
 PROGRAMS_SECRET_KEY: 'Your secret key here'
