--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -26,6 +26,13 @@ EDXAPP_BADGR_ISSUER_SLUG: "example-issuer"
 ## RACCOONGANG ##
 EDXAPP_COPYRIGHT_YEAR: 2016
 
+EDXAPP_THIRD_PARTY_AUTH_BACKENDS:
+- "social.backends.google.GoogleOAuth2"
+- "social.backends.linkedin.LinkedinOAuth2"
+- "social.backends.facebook.FacebookOAuth2"
+- "social.backends.twitter.TwitterOAuth"
+- "third_party_auth.saml.SAMLAuthBackend"
+
 EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 
@@ -1037,6 +1044,7 @@ lms_env_config:
   BADGR_API_TOKEN: "{{ EDXAPP_BADGR_API_TOKEN }}"
   BADGR_BASE_URL: "{{ EDXAPP_BADGR_BASE_URL }}"
   BADGR_ISSUER_SLUG: "{{ EDXAPP_BADGR_ISSUER_SLUG }}"
+  THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
   ## END RACCOONGANG ##
 
 cms_auth_config:
