Added default value EDXAPP_GRADE_STORAGE_TYPE_LOCAL for nginx role.

--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -157,3 +157,5 @@ NGINX_CREATE_HTPASSWD_FILE: >
     XQUEUE_ENABLE_BASIC_AUTH|bool or
     XSERVER_ENABLE_BASIC_AUTH|bool
   }}
+
+EDXAPP_GRADE_STORAGE_TYPE_LOCAL: false
