--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -39,6 +39,8 @@ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
+
+EDXAPP_GRADE_STORAGE_TYPE_LOCAL: false
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
