--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -77,6 +77,13 @@ nginx_default_sites: []
 nginx_debian_pkgs:
   - python-passlib
 
+####RACCOONGANG####
+EDXAPP_NGINX_MAINTENANCE_PAGE: True
+EDXAPP_NGINX_MAINTENANCE_PATH: '/edx/var/nginx/server-static/maintenance'
+EDXAPP_NGINX_MAINTENANCE_FILE: 'maintenance'
+EDXAPP_NGINX_MAINTENANCE_INDEX: 'maintenance.html'
+EDXAPP_NGINX_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
+####RACCOONGANG####
 NGINX_EDXAPP_ENABLE_S3_MAINTENANCE: False
 nginx_default_error_page: "/server/server-error.html"
 NGINX_EDXAPP_ERROR_PAGES:
