add NGINX maintenance configuration

--- a/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
@@ -8,3 +8,10 @@ le_packages:
 
 EDXAPP_CMS_SSL_NGINX_PORT: 443
 EDXAPP_LMS_SSL_NGINX_PORT: 443
+
+EDXAPP_NGINX_BACKUP_MAINTENANCE_PAGE: True
+EDXAPP_NGINX_BACKUP_MAINTENANCE_PATH: '/edx/var/nginx/server-static/maintenance'
+EDXAPP_NGINX_BACKUP_MAINTENANCE_FILE: 'maintenance'
+EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
+EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
+
