fix credentials nginx template

--- a/playbooks/edx-provision.yml
+++ b/playbooks/edx-provision.yml
@@ -110,6 +110,8 @@
       nginx_sites:
       - cms
       - lms
+      - programs-multitenant-redirect
+      - credentials-multitenant-redirect
     - edxapp
 
 - hosts: edx2
@@ -174,6 +176,8 @@
       nginx_sites:
       - cms
       - lms
+      - programs-multitenant-redirect
+      - credentials-multitenant-redirect
     - edxapp
 
 - hosts: edx1
