--- a/playbooks/mysql-rds-custom.yml
+++ b/playbooks/mysql-rds-custom.yml
@@ -22,6 +22,14 @@
       state: "present"
       encoding: "utf8"
       <<: *default_connection
+    - name: "{{ PROGRAMS_DEFAULT_DB_NAME }}"
+      state: "present"
+      encoding: "utf8"
+      <<: *default_connection
+    - name: "{{ CREDENTIALS_DEFAULT_DB_NAME }}"
+      state: "present"
+      encoding: "utf8"
+      <<: *default_connection
 
   database_users:
     - name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
@@ -54,6 +62,14 @@
       host: "%"
       privileges:
         - '{{ XQUEUE_MYSQL_DB_NAME }}.*:ALL'
+      <<: *default_connection
+    - name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
+      state: "present"
+      password: "{{ COMMON_MYSQL_MIGRATE_PASS }}"
+      host: "%"
+      privileges:
+        - '{{ PROGRAMS_DEFAULT_DB_NAME }}.*:ALL'
+        - '{{ CREDENTIALS_DEFAULT_DB_NAME }}.*:ALL'
       <<: *default_connection
     - name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
       state: "present"
@@ -103,6 +119,20 @@
       host: "%"
       privileges:
         - "{{ ORA_MYSQL_DB_NAME }}.*:ALL"
+      <<: *default_connection
+    - name: "{{ PROGRAMS_DEFAULT_DB_USER }}"
+      state: "present"
+      password: "{{ PROGRAMS_DEFAULT_DB_PASSWORD }}"
+      host: "%"
+      privileges:
+        - "{{ PROGRAMS_DEFAULT_DB_NAME }}.*:ALL"
+      <<: *default_connection
+    - name: "{{ CREDENTIALS_MYSQL_USER }}"
+      state: "present"
+      password: "{{ CREDENTIALS_MYSQL_PASSWORD }}"
+      host: "%"
+      privileges:
+        - "{{ CREDENTIALS_DEFAULT_DB_NAME }}.*:ALL"
       <<: *default_connection
     - name: "{{ COMMON_MYSQL_READ_ONLY_USER }}"
       state: "present"
