--- a/playbooks/roles/mysql-custom/tasks/main.yml
+++ b/playbooks/roles/mysql-custom/tasks/main.yml
@@ -184,6 +184,40 @@
     priv='*.*:CREATE USER'
     append_privs=yes
 
+- name: create a database for programs
+  mysql_db: >
+    db={{ PROGRAMS_DEFAULT_DB_NAME }}
+    state=present
+    encoding=utf8
+  when: PROGRAMS_DEFAULT_DB_NAME is defined
+
+- name: setup the migration db user for programs
+  mysql_user: >
+    name={{ PROGRAMS_DEFAULT_DB_USER }}
+    password={{ PROGRAMS_DEFAULT_DB_PASSWORD }}
+    priv='{{ PROGRAMS_DEFAULT_DB_NAME }}.*:ALL'
+    append_privs=yes
+    host={{ item }}
+  with_items:
+    - "{{ groups.lms }}"
+
+- name: create a database for credentials
+  mysql_db: >
+    db={{ CREDENTIALS_DEFAULT_DB_NAME }}
+    state=present
+    encoding=utf8
+  when: CREDENTIALS_DEFAULT_DB_NAME is defined
+
+- name: setup the migration db user for credentials
+  mysql_user: >
+    name={{ CREDENTIALS_MYSQL_USER }}
+    password={{ CREDENTIALS_MYSQL_PASSWORD }}
+    priv='{{ CREDENTIALS_DEFAULT_DB_NAME }}.*:ALL'
+    append_privs=yes
+    host={{ item }}
+  with_items:
+    - "{{ groups.lms }}"
+
 - name: copy the .my.cnf file
   template: src=.my.cnf.j2 dest=~/my.cnf
   notify:
