--- a/playbooks/edx-aws-bucket-create.yml
+++ b/playbooks/edx-aws-bucket-create.yml
@@ -18,4 +18,8 @@
       bucket: "{{ EDXAPP_FINANCIAL_REPORTS.BUCKET | default ('IGNORE') }}"
     - role: aws-bucket-create
       bucket: "{{ EDXAPP_VIDEO_UPLOAD_PIPELINE.BUCKET | default ('IGNORE') }}"
+    - role: aws-bucket-create
+      bucket: "{{ PROGRAMS_MEDIA_STORAGE_BACKEND.AWS_STORAGE_BUCKET_NAME | default ('IGNORE') }}"
+    - role: aws-bucket-create
+      bucket: "{{ CREDENTIALS_FILE_STORAGE_BACKEND.AWS_STORAGE_BUCKET_NAME | default ('IGNORE') }}"
 
