Add remote elasticsearch support

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -39,6 +39,8 @@ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_AWS_BACKUP_ENABLE: false
 EDXAPP_AWS_BACKUP_REPO: ''
 EDXAPP_AWS_BACKUP_VERSION: ''
+
+EDXAPP_ELASTIC_SEARCH_HOST: 'localhost'
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -969,6 +971,7 @@ generic_env_config:  &edxapp_generic_env
   COPYRIGHT_YEAR: "{{ EDXAPP_COPYRIGHT_YEAR }}"
   COURSE_CATALOG_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION }}"
   COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
+  ELASTIC_SEARCH_HOST: "{{ EDXAPP_ELASTIC_SEARCH_HOST }}"
 
 lms_auth_config:
   <<: *edxapp_generic_auth
