--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -83,6 +83,12 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_PATH: '/edx/var/nginx/server-static/maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_FILE: 'maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
+
+PROGRAMS_NGINX_REDIRECT: False
+PROGRAMS_NGINX_REDIRECT_PORT: 18140
+
+CREDENTIALS_NGINX_REDIRECT: False
+CREDENTIALS_NGINX_REDIRECT_PORT: 18150
 ####RACCOONGANG####
 NGINX_EDXAPP_ENABLE_S3_MAINTENANCE: False
 nginx_default_error_page: "/server/server-error.html"
