--- a/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
@@ -15,3 +15,5 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_FILE: 'maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
 
+LETSENCRYPT_ADDITIONAL_DOMAIN: []
+
