Update programs and credentials nginx ssl configuration with proxy_pass

--- a/playbooks/roles/credentials/defaults/main.yml
+++ b/playbooks/roles/credentials/defaults/main.yml
@@ -244,3 +244,7 @@ credentials_debian_pkgs:
   - libpng12-dev
 
 credentials_redhat_pkgs: []
+
+####RACCOONGANG####
+CREDENTIALS_NGINX_REDIRECT: False
+
