add CMS_HOSTNAME to multitenant playbooks (nginx configuration)

--- a/playbooks/edx-provision.yml
+++ b/playbooks/edx-provision.yml
@@ -114,6 +114,7 @@
       - credentials-multitenant-redirect
       nginx_default_sites:
       - lms
+      CMS_HOSTNAME: "{{ EDXAPP_CMS_SITE_NAME }}"
     - edxapp
 
 - hosts: edx2
@@ -182,6 +183,7 @@
       - credentials-multitenant-redirect
       nginx_default_sites:
       - lms
+      CMS_HOSTNAME: "{{ EDXAPP_CMS_SITE_NAME }}"
     - edxapp
 
 - hosts: edx1
