--- a/playbooks/roles/mysql-custom/tasks/main.yml
+++ b/playbooks/roles/mysql-custom/tasks/main.yml
@@ -218,6 +218,26 @@
   with_items:
     - "{{ groups.lms }}"
 
+- name: setup the migration db user for programs
+  mysql_user: >
+    name={{ COMMON_MYSQL_MIGRATE_USER }}
+    password={{ COMMON_MYSQL_MIGRATE_PASS }}
+    priv='{{ PROGRAMS_DEFAULT_DB_NAME }}.*:ALL'
+    append_privs=yes
+    host={{ item}}
+  with_items:
+    - "{{ groups.programs }}"
+
+- name: setup the migration db user for credentials
+  mysql_user: >
+    name={{ COMMON_MYSQL_MIGRATE_USER }}
+    password={{ COMMON_MYSQL_MIGRATE_PASS }}
+    priv='{{ CREDENTIALS_DEFAULT_DB_NAME }}.*:ALL'
+    append_privs=yes
+    host={{ item}}
+  with_items:
+    - "{{ groups.credentials }}"
+
 - name: copy the .my.cnf file
   template: src=.my.cnf.j2 dest=~/my.cnf
   notify:
