--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -86,9 +86,11 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
 
 PROGRAMS_NGINX_REDIRECT: False
 PROGRAMS_NGINX_REDIRECT_PORT: 18140
+PROGRAMS_NGINX_REDIRECT_SSL_PORT: 443
 
 CREDENTIALS_NGINX_REDIRECT: False
 CREDENTIALS_NGINX_REDIRECT_PORT: 18150
+CREDENTIALS_NGINX_REDIRECT_SSL_PORT: 443
 ####RACCOONGANG####
 NGINX_EDXAPP_ENABLE_S3_MAINTENANCE: False
 nginx_default_error_page: "/server/server-error.html"
