Update edx-update-credentials playbook

--- a/playbooks/edx-update-credentials.yml
+++ b/playbooks/edx-update-credentials.yml
@@ -6,6 +6,9 @@
   become_user: root
   gather_facts: True
   pre_tasks:
+    - name: prepare install nodejs
+      shell: curl -sL https://deb.nodesource.com/setup | sudo bash -
+
     - name: Update repositories cache and install packages
       apt:
         name: "{{ item }}"
@@ -16,6 +19,8 @@
         - gcc
         - g++
         - build-essential
+        - nodejs
+
   roles:
     - role: nginx
       nginx_sites:
